--- a/project.qmd
+++ b/project.qmd
@@ -24,6 +24,7 @@ output:
 #| echo: false
 devtools::install_github("thomasp85/patchwork")
 ```
+
 In this section, we set up the necessary R packages for data processing and exploratory spatial data analysis. The following packages are downloaded.
 
 -   [**sp**](https://cran.r-project.org/web/packages/sp/index.html) for handling and analysing spatial data, providing classes and methods for spatial data manipulation.
@@ -192,7 +193,7 @@ distance_faults_df <- as.data.frame(distance_faults_final,xy=TRUE)%>%drop_na()
 ```
 
 ::: {style="color: #603494;"}
-## 7.0  Plot with ggplot2 {style="color: #603494;"}
+## 7.0 Plot with ggplot2 {style="color: #603494;"}
 :::
 
 In this session, we will plot the various parametric data we prepared and processed in previous session into thematic maps. We will use the following functions from ggplot2 to plot these maps.
@@ -203,7 +204,9 @@ In this session, we will plot the various parametric data we prepared and proces
 
 -   [`geom_sf()`](https://ggplot2.tidyverse.org/reference/ggsf.html) automatically detects the geometry type of spatial objects stored in `sf` and draw maps accordingly.
 
-#### 7.01  Average Precipitation
+#### 7.01 Average Precipitation
+
+Precipitation and subsequently rainfall directly affect landslide susceptibility through triggering soil and debris movement, and causing instability of soil layers.
 
 ::: panel-tabset
 ## Plot
@@ -233,30 +236,6 @@ ggplot()+
         axis.text.y = element_text(size = 8),
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9))
-
-ggplot()+
-  geom_raster(aes(x=x,y=y,fill=elevation_m),data=elevation_df)+
-  geom_sf(fill='transparent',data=valtellina)+
-  scico::scale_fill_scico('elevation (m)',direction = -1,palette = "lajolla")+
-  coord_sf(expand=FALSE)+
-  labs(x='Longitude',y='Latitude',
-       title="Elevation Map",
-       subtitle='Valtellina Valley, Italy',
-       caption='Source: Shuttle Radar Topography Mission') +
-  cowplot::theme_cowplot()+
-  theme(panel.grid.major = element_line(color = gray(.5),
-                                        linetype = 'dashed',
-                                        linewidth = 0.1),
-        panel.grid.minor = element_blank(),
-        panel.background = element_rect(fill=NA,color = 'black'),
-        panel.ontop = TRUE,
-        axis.title.x = element_text(size = 10), 
-        axis.title.y = element_text(size = 10),
-        axis.text.x = element_text(size = 8),
-        axis.text.y = element_text(size = 8),
-        legend.title = element_text(size = 10),
-        legend.text = element_text(size = 9))
-
 ```
 
 ## Code
@@ -287,7 +266,19 @@ ggplot()+
         axis.text.y = element_text(size = 8),
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9))
+```
+:::
+:::
 
+#### 7.02 Elevation
+
+Elevation factor affects the landslide susceptibility in the way that higher elevations are generally more susceptible to landslides. Many studies observed higher frequency of landslides at higher elevation than lower elevation.
+
+::: panel-tabset
+## Plot
+
+```{r, code_folding=FALSE, results='hide', message=FALSE, warning=FALSE}
+#| echo: false
 ggplot()+
   geom_raster(aes(x=x,y=y,fill=elevation_m),data=elevation_df)+
   geom_sf(fill='transparent',data=valtellina)+
@@ -310,12 +301,45 @@ ggplot()+
         axis.text.y = element_text(size = 8),
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9))
-
 ```
 :::
+
+## Code
+
+::: {style="font-size: 1em"}
+```{r, code_folding=FALSE, results='hide', message=FALSE, warning=FALSE}
+#| eval: false
+ggplot()+
+  geom_raster(aes(x=x,y=y,fill=elevation_m),data=elevation_df)+
+  geom_sf(fill='transparent',data=valtellina)+
+  scico::scale_fill_scico('elevation (m)',direction = -1,palette = "lajolla")+
+  coord_sf(expand=FALSE)+
+  labs(x='Longitude',y='Latitude',
+       title="Elevation Map",
+       subtitle='Valtellina Valley, Italy',
+       caption='Source: Shuttle Radar Topography Mission') +
+  cowplot::theme_cowplot()+
+  theme(panel.grid.major = element_line(color = gray(.5),
+                                        linetype = 'dashed',
+                                        linewidth = 0.1),
+        panel.grid.minor = element_blank(),
+        panel.background = element_rect(fill=NA,color = 'black'),
+        panel.ontop = TRUE,
+        axis.title.x = element_text(size = 10), 
+        axis.title.y = element_text(size = 10),
+        axis.text.x = element_text(size = 8),
+        axis.text.y = element_text(size = 8),
+        legend.title = element_text(size = 10),
+        legend.text = element_text(size = 9))
+```
 :::
 
-#### 7.02  Toporgraphic Wetness Index
+:::
+
+#### 
+
+#### 7.02 Toporgraphic Wetness Index
+
 Topographic wetness index (TWI) describe the impacts of topographic factors on the soil moisture content along the runoff areas and can be used to describe the hydrological influences on landslide occurrences.
 
 ::: panel-tabset
@@ -379,8 +403,9 @@ ggplot()+
 :::
 :::
 
-#### 7.03  Lithology
-Lithology refers to the type of rock that makes up a slope.
+#### 7.03 Lithology
+
+Lithology refers to the type of rock that makes up a slope. Different rock types have different inherent characteristics that affect the distribution of slope instability, which can results in landslide occurrences.
 
 ::: panel-tabset
 ## Plot
@@ -457,7 +482,8 @@ ggplot()+
 :::
 :::
 
-#### 7.04  Profile Curvature
+#### 7.04 Profile Curvature
+
 Profile curvature refers to curvature of a slope profile, which is the line that intersects the slope surface at right angles. It can be convex, concave, or linear.
 
 ::: panel-tabset
@@ -530,7 +556,8 @@ ggplot(data=profile_classifed_df)+
 :::
 :::
 
-#### 7.05  Plan Curvature
+#### 7.05 Plan Curvature
+
 Plan (or planform) curvature refers to the curvature of a slope in the horizontal plane. It can be convex, concave, or linear.
 
 ::: panel-tabset
@@ -600,8 +627,9 @@ ggplot(data=plan_classifed_df)+
 :::
 :::
 
-#### 7.06  Slope Angle
-Slope angle refers to the angle of inclination of the slope surface, measured from the horizontal. It is usually expressed in degrees.
+#### 7.06 Slope Angle
+
+Slope angle refers to the angle of inclination of the slope surface, measured from the horizontal. It is usually expressed in degrees. Slope angles are directly influential in landslide susceptibility because they controls the movement of materials based on gravity.
 
 ::: panel-tabset
 ## Plot
@@ -663,7 +691,9 @@ ggplot()+
 :::
 :::
 
-#### 7.07  Distance to Settlements
+#### 7.07 Distance to Settlements
+
+Distance to settlements refers to the Euclidean distance between the point of interest and the nearest human settlements. Expansion of settlements often leads to modification of the natural geomorphology of the area. This can destabilize slopes and impose landslide risk.
 
 ::: panel-tabset
 ## Plot
@@ -725,7 +755,9 @@ ggplot()+
 :::
 :::
 
-#### 7.08  Distance to Roads
+#### 7.08 Distance to Roads
+
+Distance to roads refers to the Euclidean distance between the point of interest and the nearest road network segments. Transport lines such as roads may increase landslide risk through oversteepening.
 
 ::: panel-tabset
 ## Plot
@@ -787,7 +819,9 @@ ggplot()+
 :::
 :::
 
-#### 7.09  Distance to Rivers/Streams
+#### 7.09 Distance to Rivers/Streams
+
+Distance to rivers/streams refers to the Euclidean distance between the point of interest and the nearest rivers or streams. Movement of water can erode and cause "undercuts" to the base of an slope, making it oversteepened and unstable. This can drive landslide risks.
 
 ::: panel-tabset
 ## Plot
@@ -817,7 +851,9 @@ ggplot()+
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9))
 ```
+
 ## Code
+
 ::: {style="font-size: 1em"}
 ```{r, code_folding=FALSE, results='hide', message=FALSE, warning=FALSE}
 #| eval: false
@@ -847,7 +883,9 @@ ggplot()+
 :::
 :::
 
-#### 7.10  Distance to Faults
+#### 7.10 Distance to Faults
+
+Distance to rivers/streams refers to the Euclidean distance between the point of interest and the nearest geological faults. Faults refers to tectonic breaks or fractures between blocks of rocks, hence decreasing the strength of the rock. Areas closer to the faults are more prone to landslide than the area further away.
 
 ::: panel-tabset
 ## Plot
@@ -876,7 +914,9 @@ ggplot()+
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9))
 ```
+
 ## Code
+
 ::: {style="font-size: 1em"}
 ```{r, code_folding=FALSE, results='hide', message=FALSE, warning=FALSE}
 #| eval: false
@@ -905,8 +945,9 @@ ggplot()+
 :::
 :::
 
-#### 7.11  Slope Aspect Direction
-Slope aspect direction refers to the direction that a slope faces. It is usually expressed as a compass direction, such as north, south, east, or west.
+#### 7.11 Slope Aspect Direction
+
+Slope aspect direction refers to the direction that a slope faces. It is usually expressed as a compass direction, such as north, south, east, or west. Aspect affects the exposure to sunlight, wind and precipitation thereby indirectly affecting other factors that contribute to landslides such as soil moisture, vegetation cover and soil thickness.
 
 ::: panel-tabset
 ## Plot
@@ -1007,4 +1048,3 @@ ggplot(data=aspect_classifed_df)+
 ```
 :::
 :::
-
