--- a/project.qmd
+++ b/project.qmd
@@ -350,7 +350,6 @@ ggplot()+
         legend.text = element_text(size = 9))
 ```
 :::
-
 :::
 
 #### 
@@ -368,7 +367,7 @@ Topographic wetness index (TWI) describe the impacts of topographic factors on t
 ggplot()+
   geom_raster(aes(x=x,y=y,fill=twi_),data=twi_df)+
   geom_sf(fill='transparent',data=valtellina)+
-  scale_fill_gradientn('twi', colours=c("#d1ebff", "#37caec", "#2a93d5", "#125488"))+
+  scale_fill_gradientn('twi', colours=c("#9beef0", "#59c1ed", "#0096e6", "#006ad5", "#0036b4", "#020295"))+
   coord_sf(expand=FALSE)+
   labs(x='Longitude',y='Latitude',
        title="Topographic Wetness Index Map",
@@ -397,7 +396,7 @@ ggplot()+
 ggplot()+
   geom_raster(aes(x=x,y=y,fill=twi_),data=twi_df)+
   geom_sf(fill='transparent',data=valtellina)+
-  scale_fill_gradientn('twi', colours=c("#d1ebff", "#37caec", "#2a93d5", "#125488"))+
+  scale_fill_gradientn('twi', colours=c("#9beef0", "#59c1ed", "#0096e6", "#006ad5", "#0036b4", "#020295"))+
   coord_sf(expand=FALSE)+
   labs(x='Longitude',y='Latitude',
        title="Topographic Wetness Index Map",
@@ -652,9 +651,14 @@ Slope angle refers to the angle of inclination of the slope surface, measured fr
 ```{r, code_folding=FALSE, results='hide', message=FALSE, warning=FALSE}
 #| echo: false
 ggplot()+
+  geom_raster(data = hillshade_df,
+              aes(x, y, fill = hillshade),
+              show.legend = FALSE) +
+  scale_fill_distiller(palette = "Greys") +
+  new_scale_fill() +
   geom_raster(aes(x=x,y=y,fill=slope_degree),data=slope_df)+
   geom_sf(fill='transparent',data=valtellina)+
-  scale_fill_gradientn('twi', colours=c("#79ab01", "#b7d300","#fffe00", "#fe9900","#ff6600", "#fc2200"))+
+  scale_fill_gradientn('twi', colours=c("#ffc809", "#ff7d04","#ff163b", "#ff006f","#cc01b8", "#0000ff"))+
   coord_sf(expand=FALSE)+
   labs(x='Longitude',y='Latitude',
        title="Slope Map",
@@ -681,9 +685,14 @@ ggplot()+
 ```{r}
 #| eval: false
 ggplot()+
+  geom_raster(data = hillshade_df,
+              aes(x, y, fill = hillshade),
+              show.legend = FALSE) +
+  scale_fill_distiller(palette = "Greys") +
+  new_scale_fill() +
   geom_raster(aes(x=x,y=y,fill=slope_degree),data=slope_df)+
   geom_sf(fill='transparent',data=valtellina)+
-  scale_fill_gradientn('twi', colours=c("#79ab01", "#b7d300","#fffe00", "#fe9900","#ff6600", "#fc2200"))+
+  scale_fill_gradientn('twi', colours=c("#ffc809", "#ff7d04","#ff163b", "#ff006f","#cc01b8", "#0000ff"))+
   coord_sf(expand=FALSE)+
   labs(x='Longitude',y='Latitude',
        title="Slope Map",
