--- a/gwsmodelling.qmd
+++ b/gwsmodelling.qmd
@@ -21,10 +21,9 @@ To develop a landslide susceptibility methodology framework, we will explore and
 ## Import Data
 
 ```{r}
-#| eval: false
 
 pacman::p_load(sf, raster, spatstat, tmap, devtools)
-study_grids <- st_read(dsn = "~/IS485-Landslide/data/vector/grid.gpkg")
+#study_grids <- st_read(dsn = "~/IS485-Landslide/data/vector/grid.gpkg")
 ```
 
 ```{r}
